[package]
name = "ui-events-wayland"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Bridges Wayland input events into ui-events"
keywords = ["wayland", "linux", "input", "pointer"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[dependencies]
ui-events = { workspace = true, features = ["std"] }
dpi.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"

[lints]
workspace = true
