[package]
name = "ui-events-wayland"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Bridges Wayland input events into ui-events"
keywords = ["wayland", "linux", "input", "pointer"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
# Resolve logical keys, typed text, and authoritative modifiers from the
# compositor's XKB keymap. This pulls in `xkbcommon`, which links the system
# `libxkbcommon`; without it the keyboard reducer resolves only physical keys.
xkb = ["dep:xkbcommon"]

[dependencies]
ui-events = { workspace = true, features = ["std"] }
dpi.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
xkbcommon = { version = "0.9", optional = true, default-features = false }

[lints]
workspace = true
