[package]
name = "ui-events-web"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A library for bridging ui-events and web"
keywords = ["windowing", "input", "pointer"]
categories = ["graphics", "gui"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["ui-events/std"]

[dependencies]
ui-events = { workspace = true, default-features = false }
dpi.workspace = true
js-sys = { version = "0.3.82", default-features = false }
web-sys = { version = "0.3.82", default-features = false, features = [
    "CompositionEvent",
    "Event",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WheelEvent",
    "PointerEvent",
    "Element",
] }

[lints]
workspace = true

[dev-dependencies]
web-sys = { version = "0.3.82", features = [
    "CompositionEvent",
    "DomRect",
    "Element",
    "InputEvent",
    "KeyboardEvent",
    "PointerEvent",
    "Window",
] }
